# FlightlessManicotti

./: .eprj  .gitignore  Doxyfile  DoxygenLayout.xml  README.markdown  SConscript  SConstruct  ccompat.h  index.html  inline.h  main.cpp  params.json
C1x/: stdatomic.h  threads.c  threads.h
Cocoa/FlightlessManicotti/: main.lua
Cocoa/FlightlessManicotti/FlightlessManicotti/: FlightlessManicotti-Info.plist  FlightlessManicotti-Prefix.pch  KLAppDelegate.h  KLAppDelegate.m  KLOpenGLView.h  KLOpenGLView.m  main.m
Cocoa/FlightlessManicotti/FlightlessManicotti.xcodeproj/: project.pbxproj
Cocoa/FlightlessManicotti/FlightlessManicotti/en.lproj/: MainMenu.xib
Ziggurat/: NOTICE.alljoyn  Readme.md  SConscript
Ziggurat/conf/darwin/: SConscript
Ziggurat/conf/ios/: SConscript
Ziggurat/conf/ios/arm/: SConscript
Ziggurat/conf/windows/: SConscript
amp/: .gitignore
core/: atomic.h  error.h  memcpy.c  memcpy.h  memory.c  memory.h  queue.c  queue.h
doc/: .gitignore
doc/html/: _acton_8lua.html  _cast_8lua.html  _color_texture_8lua.html  _common_8lua.html  _component_8lua.html  _component_bucket_8lua.html  _events_8lua.html  _handler_8lua.html  _lsystem_8lua.html  _manicotti_8lua.html  _mesh_8lua.html  _micro_allocator_8h.html  _micro_allocator_8h_source.html  _particle_so_a_8lua.html  _process_component_8lua.html  _r_e_a_d_m_e_8markdown.html  _render_8lua.html  _render_component_8lua.html  _render_instance_8lua.html  _render_list_8lua.html  _render_target_8lua.html  _s_f_m_t-alti_8h.html  _s_f_m_t-alti_8h_source.html  _s_f_m_t-params19937_8h.html  _s_f_m_t-params19937_8h_source.html  _s_f_m_t-params_8h.html  _s_f_m_t-params_8h_source.html  _s_f_m_t-sse2_8h.html  _s_f_m_t-sse2_8h_source.html  _s_f_m_t_8h.html  _s_f_m_t_8h_source.html  _scene2_d_8lua.html  _scene2_d_component_8lua.html  _scene3_d_component_8lua.html  _shader_constant_assigner_8lua.html  _shader_factory_8lua.html  _texture_8hpp.html  _texture_8hpp_source.html  _texture_8lua.html  _vertex_normals_8lua.html  (+540 more)
doc/html/search/: all_66.js  search.js
engine/: ccompat.h  fm.h
engine/core/: error_codes.h  logger.h  memory.c  memory.h  queue.c  queue.h  ringbuffer.c  ringbuffer.h
engine/core/internal/: ringbuffer_internal.h
engine/script/: script.c  script.h
engine/script/modules/: scriptevent.c
engine/windows/: stdbool.h
example/: SConscript  main.cpp  main.lua  script.lua
example/game/entity/: EntityComponent.lua
ide/: .gitignore
ide/visualstudio_2008/: FlightlessManicotti.sln  FlightlessManicotti.vcproj
ide/visualstudio_2010/: FlightlessManicotti.sln  FlightlessManicotti.vcxproj
lib/C1x/: stdatomic.h
lib/MicroAllocator/: MicroAllocator.cpp  MicroAllocator.h  SConstruct
lib/amp/: .gitignore  CMakeLists.txt  SConscript
lib/amp/src/c/amp/: amp_raw_mutex.h  amp_semaphore.h  amp_semaphore_winthreads.c
lib/lua-5.1.4/: .gitignore  SConscript  SConstruct
lib/nedmalloc/: .gitignore  SConscript  SConstruct  nedmalloc_test_cpp.vcproj
runtime/: SConscript  ccompat.h  fm.h
runtime/core/: error_codes.h  hash.h  idxallocator.c  idxallocator.h  lifecycle.c  logger.h  lookup3.c  memory.c  memory.h  ringbuffer.c  ringbuffer.h  simd.h  timer.c  timer.h
runtime/core/internal/: ringbuffer_internal.h
runtime/game/scene2d/: scene_container.h  scene_container_2d.c  scene_container_2d.h
runtime/include/FlightlessManicotti/: fm.h
runtime/lib/MicroAllocator/: MicroAllocator.cpp  MicroAllocator.h  SConscript
runtime/lib/amp/: .gitignore  SConscript  SConstruct
runtime/lib/lsqlite3/: SConscript
runtime/lib/lua/: SConscript
runtime/lib/nedmalloc/: SConscript  SConstruct  nedmalloc.c
runtime/lib/sqlite3/: .gitignore  SConscript
runtime/process/: mainloop.c  process.c  process.h
runtime/script/: script.c  script.h
runtime/script/modules/: scriptevent.c
runtime/scriptinterface/: script.c  script.h  scriptevents.c  scriptevents.h
runtime/scriptinterface/helpers/: vector2d.c  vector2d.h
runtime/scriptinterface/modules/: cast.c  scene2d.c  scriptevent.c  vector2d.c
runtime/src/beat/: beat.c  midi.c
runtime/src/core/: idxallocator.c  lifecycle.c  log.c  lookup3.c  memory.c  rarray.c  ringbuffer.c  timer.c
runtime/src/math/: math.c  matrix.c  matrix_internal.h  vector.c  vector_internal.h
runtime/src/process/: mainloop.c  process.c
runtime/src/render/: render_list.c
runtime/src/sanskrit/: README.markdown
runtime/src/scriptinterface/: script.c  scriptevents.c  scriptinterface.h
script/: script.c  script.h  script.lua
script/_doc_src/: Cast.lua  Events.lua  Manicotti.lua  Mesh.lua  Render.lua  RenderInstance.lua  RenderList.lua  RenderTarget.lua  Scene2D.lua  ShaderConstantAssigner.lua  Texture.lua
script/entity/: IEntityComponent.lua
script/events/: Common.lua  Handler.lua  init.lua
script/game/: Component.lua  ComponentBucket.lua  Entity.lua  Lsystem.lua
script/game/components/: Component.lua  ComponentBucket.lua  ProcessComponent.lua  init.lua
script/game/scene/: Scene2DComponent.lua
script/game/scene2d/: Scene2DComponent.lua
script/lua-5.1.4/: .gitignore
script/render/: ShaderFactory.lua  ShaderManager.lua
script/render/opengl/: ShaderFactory.lua
script/render/shaders/: ColorTexture.lua  FSColorTexture.lua  FSTwoColorTexture.lua  ParticleSoA.lua  PassThrough.lua  TwoColorTexture.lua  VertexNormals.lua
site_scons/: build_swig_header.py  site_init.py
std/C1x/: stdatomic.h
std/C99/: stdbool.h
tools/Markdown/: Markdown2dox
tools/doxygen-lua/example/: example.lua
(+111 files in other folders)
